# MCP-Rust

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MISSION.md  NOTES.md  REFACTOR-PLAN.md  RESOURCES.md  USER-MANUAL.md
.devcontainer/: devcontainer.json
assets/: quiz.js  style.css
designs/: step-10-streamable-http-transport.md  step-11-soft-and-ranking.md  step-12-result-bounds.md  step-13-chunk-continuity.md  step-14-word-boundary-short-terms.md
learning-records/: 0001-prior-rust-knowledge.md  0002-prior-mcp-knowledge.md  0003-devcontainer-vs-runtime-understanding.md  0004-async-await-introduced.md  0005-mcp-resources-introduced.md  0005-search-excerpts-and-string-slicing.md  0005-tool-parameters-introduced.md  0006-rmcp-parameters-wrapper-pattern.md  0007-end-to-end-pipeline-verified.md  0008-copilot-runs-inside-container.md  0009-claude-code-mcp-registration.md  0010-fuzzy-multi-term-search.md  0011-stop-word-filtering.md  0012-result-ranking.md  0013-list-docs-and-hashmap.md  0014-multiple-excerpts.md  0015-unit-tests.md  0016-configurable-knowledge-path.md  0017-integration-tests.md  0018-drop-and-tempdir.md  0019-batch-extraction.md  0020-utf8-char-boundaries.md  0022-clap-derive-cli.md  0023-pdftotext-fallback.md  0024-clap-applied-and-verified.md
lessons/: 0001-what-is-mcp.html  0002-devcontainer-setup.html  0003-cargo-fundamentals.html  0004-first-mcp-server.html  0005-tools-with-parameters.html  0006-connect-to-claude-desktop.html  (+44 more)
mcp-server/: Cargo.toml
mcp-server/src/: bundle.rs  chunk.rs  frontmatter.rs  index.rs  lib.rs  main.rs  search.rs
(+5 files in other folders)
